fixed double scrollbar bug

--- a/src/home.css
+++ b/src/home.css
@@ -4,7 +4,6 @@
     position: absolute;
     width: 100%;
     height: 600%;
-    overflow-x: hidden;
 }
 
 .faceBabylon {
